--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
                 <span id="typed-strings">
                   <span>I'm Vitor Alves Raquel</span>
                   <span>Python Developer</span>
-                  <span>Working as a Freelance</span>
+                  <span>Working as a Freelancer</span>
                 </span>
                 <span id="typed"></span>
               </h1>
